Fixed the sidebar visibility issue on tablet

--- a/assets/sass/_widgets.scss
+++ b/assets/sass/_widgets.scss
@@ -176,7 +176,7 @@
 .sidebar-close { display: none; }
 
 // Sidebar on Mobile
-@media #{$tablet-port} {
+@media #{$tablet-port-with-gap} {
   .sidebar {
     position: fixed;
     height: 100%;
